<resources>
    <string name="app_name">InkHive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="Register">Register</string>
    <string name="click_to_register_now">Click to Register now</string>
    <string name="click_to_login">Click to login</string>
    <string name="logout">logout</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="profile_icon">profile_icon</string>
    <string name="today_a_reader_tommorrow_a_leader">Today a reader, tommorrow a leader</string>
    <string name="popular_this_week">Popular this week</string>
    <string name="view_more">View More</string>
    <string name="recommendations">Recommendations</string>
    <string name="pouplar_this_week">Pouplar this week</string>
    <string name="welcome_user">Welcome User</string>
    <string name="book_title">Book Title</string>
    <string name="view">View</string>
    <string name="quote">today a reader tommorrow a leader</string>
    <string name="popular_list">Popular This Week</string>
    <string name="recommendation_list">Recommendation</string>
</resources>