<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEBE9"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        >
        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/round_account_circle_24"
            android:contentDescription="@string/profile_icon"
            android:layout_gravity="center_horizontal"

            />

        <TextView
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_fragment"
            android:textColor="#3E2723"
            android:textSize="26sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/logout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#3E2723"
            android:backgroundTint="#A1887F"
            android:layout_marginTop="24dp"
            android:text="@string/logout"
            />
    </LinearLayout>






</FrameLayout>